--- a/templates/pages/show_venue.html
+++ b/templates/pages/show_venue.html
@@ -94,5 +94,24 @@ block content %}
 <a href="/venues/{{ venue.id }}/edit"
   ><button class="btn btn-primary btn-lg">Edit</button></a
 >
-
+<button class="delete_venue" data-id="{{venue.id}}">Delete</button>
+<script>
+  deletebutton = document.querySelector(".delete_venue");
+  deletebutton.onclick = function (e) {
+    const venueid = e.target.dataset["id"];
+    console.log("button cliecked " + venueid);
+    fetch("/venues/" + venueid, {
+      method: "DELETE",
+    })
+      .then(function (response) {
+        if (response.redirected) {
+          window.location.href = response.url;
+        }
+      })
+      .catch(function (error) {
+        document.getElementById("error").className = "";
+        console.log(error);
+      });
+  };
+</script>
 {% endblock %}
